--- a/task-08.html
+++ b/task-08.html
@@ -24,8 +24,10 @@
         <button type="button" data-action="destroy">Очистить</button>
     </div>
 
-    <div id="boxes"></div>
+    <div id="boxes">
 
+        <div class="box" style="width:100px; height:100px; background-color:rgb(149,73,206);"></div>
+    </div>
     <script src="js/task-08.js" type="module"></script>
 </body>
 
