task-08 was debugged

--- a/task-08.html
+++ b/task-08.html
@@ -26,7 +26,7 @@
 
     <div id="boxes">
 
-        <div class="box" style="width:100px; height:100px; background-color:rgb(149,73,206);"></div>
+        <!-- <div class="box" style="width:100px; height:100px; background-color:rgb(149,73,206);"></div> -->
     </div>
     <script src="js/task-08.js" type="module"></script>
 </body>
